--- a/ColdCallsTracker/ColdCallsTracker/appsettings.json
+++ b/ColdCallsTracker/ColdCallsTracker/appsettings.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "MainConnnectionString": "Server=DESKTOP-3FQTPED\\SQLEXPRESS;Database=TrackerDb;Trusted_Connection=True;"
     }
-  },
-  "AllowedHosts": "*"
 }
