сохранение скрипта, багфиксинг

--- a/ColdCallsTracker/ColdCallsTracker/appsettings.json
+++ b/ColdCallsTracker/ColdCallsTracker/appsettings.json
@@ -6,6 +6,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "MainConnnectionString": "Server=DESKTOP-3FQTPED\\SQLEXPRESS;Database=TrackerDb;Trusted_Connection=True;"
+        "MainConnnectionString": "Data Source=DESKTOP-E0D782O;Initial Catalog=TrackerDb;Integrated Security=True"
     }
 }
