--- a/ColdCallsTracker/ColdCallsTracker/ColdCallsTracker.csproj
+++ b/ColdCallsTracker/ColdCallsTracker/ColdCallsTracker.csproj
@@ -15,6 +15,9 @@
     <Content Update="Pages\Companies\Edit.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
+    <Content Update="Pages\Script\Index.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
     <Content Update="Views\Shared\_Errors.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
