--- a/ColdCallsTracker/ColdCallsTracker/appsettings.json
+++ b/ColdCallsTracker/ColdCallsTracker/appsettings.json
@@ -5,7 +5,7 @@
         }
     },
     "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "MainConnnectionString": "Data Source=DESKTOP-E0D782O;Initial Catalog=TrackerDb;Integrated Security=True"
-    }
+  "ConnectionStrings": {
+    "MainConnnectionString": "Data Source=DESKTOP-3FQTPED\\SQLEXPRESS;Initial Catalog=TrackerDb;Integrated Security=True"
+  }
 }
