--- a/ColdCallsTracker/ColdCallsTracker/ColdCallsTracker.csproj
+++ b/ColdCallsTracker/ColdCallsTracker/ColdCallsTracker.csproj
@@ -54,7 +54,13 @@
     <Content Update="Pages\Script\Index.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
+    <Content Update="Views\Login\Index.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
     <Content Update="Views\Shared\_Errors.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Views\Shared\_LoginLayout.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
   </ItemGroup>
