--- a/ColdCallsTracker/ColdCallsTracker/appsettings.json
+++ b/ColdCallsTracker/ColdCallsTracker/appsettings.json
@@ -1,11 +1,15 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
+  "AppSettings": {
+    "AdminName": "admin",
+    "AdminPassword": "sdflewi#12sp5"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MainConnnectionString": "Data Source=DESKTOP-3FQTPED\\SQLEXPRESS;Initial Catalog=TrackerDb;Integrated Security=True"
+    "MainConnnectionString": "Data Source=DESKTOP-E0D782O;Initial Catalog=TrackerDb;Integrated Security=True"
   }
 }
