--- a/ColdCallsTracker/ColdCallsTracker/appsettings.json
+++ b/ColdCallsTracker/ColdCallsTracker/appsettings.json
@@ -1,7 +1,8 @@
 {
   "AppSettings": {
     "AdminName": "admin",
-    "AdminPassword": "sdflewi#12sp5"
+    "AdminPassword": "sdflewi#12sp5",
+    "MainConnnectionString": "Data Source=DESKTOP-E0D782O;Initial Catalog=TrackerDb;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
@@ -10,6 +11,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MainConnnectionString": "Data Source=DESKTOP-E0D782O;Initial Catalog=TrackerDb;Integrated Security=True"
+    "MainConnnectionString": ""
   }
 }
